# BFU-1.2

Fibo_Crypto/: CMakeLists.txt  Fibo.cpp  Fibo.h  main.cpp
Shapes_Lab/: CMakeLists.txt  Circle.cpp  Circle.h  Rectangle.cpp  Rectangle.h  Shape.h  Triangle.cpp  Triangle.h  main.cpp
